--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-# Logs
+Logs
 logs
-*.log
-npm-debug.log*
+.log
+npm-debug.log
 yarn-debug.log*
 yarn-error.log*
 
-# OS and Editor specific files
+OS and Editor specific files
 .DS_Store
 .vscode/
 .idea/
 .env
 
-# Thumbnails and other generated files
+Thumbnails and other generated files
 *.png
 *.jpg
 *.jpeg
